добавил табы в активити с добавлением

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,11 @@
     <string name="string_next_for_btn">Далее</string>
     <string name="string_surname_for_sign_up_noacc1">Фамилия</string>
     <string name="string_login">Логин</string>
-    <string name="string_paswd">Пароль</string>
+    <string name="string_passwd">Пароль</string>
     <string name="string_repeat_passwd">Повторите пароль</string>
     <string name="first_time_in_pj">Впервые в PennyJoy?</string>
     <string name="enter_btn">Войти</string>
     <string name="sign_up_btn">Зарегистрироваться</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
