--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="CategoryAddGood">Категория</string>
     <string name="nameAddGood">Наименование</string>
     <string name="costAddGood">Стоимость</string>
+    <string name="purchaseOfPurpose">Цель покупки...</string>
     
 </resources>
