--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="purchaseOfPurpose">Цель покупки...</string>
     <string name="good_int_for_tag">2201</string>
 
+    <string name="APP_PREFERENCES">MySP</string>
+
 </resources>
