--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,41 @@
     <string name="APP_PREFERENCES">MySP</string>
     <string name="id_for_categoty_adapter">122324525</string>
 
+
+
+    <string-array name="answers">
+
+        <item>Причина для покупки достаточно веская</item>
+        <item>Возможно пригодится</item>
+        <item>У меня нет причины брать это</item>
+        <item>Причина покупки не настолько веская</item>
+
+        <item>Этот продукт крайне полезен для меня</item>
+        <item>Возможно этот продукт полезен</item>
+        <item>Беру ради удовольствия</item>
+        <item>Удовольствия больше чем пользы</item>
+
+        <item>Я готов купить за любую цену</item>
+        <item>На данный момент качество не столь важно</item>
+        <item>Я не уверен в качестве данного продукта</item>
+        <item>За такую цену качество могло быть и лучше</item>
+
+        <item>Данный продукт не несет вреда</item>
+        <item>Данный продукт не является полезным</item>
+
+        <item>Могу себе позволить без вреда бюджету</item>
+        <item>Покупка пошатнёт мой бюджет/Придется влезть в долги</item>
+
+    </string-array>
+
+    <string-array name="questions">
+
+        <item>На сколько оно тебе необходимо?</item>
+        <item>Принесет ли мне данная покупка пользу?</item>
+        <item>Насколько соизмеримы цена и качество?</item>
+        <item>Принесет ли эта покупка вред здоровью?</item>
+        <item>Несет ли эта покупка вред моему бюджету?</item>
+
+    </string-array>
+
 </resources>
