--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,8 +70,8 @@
         <item>Несет ли эта покупка вред моему бюджету?</item>
 
     </string-array>
-<string name="mb_yes">МБ ДА</string>
-<string name="mb_no">МБ НЕТ</string>
+<string name="mb_yes">Вероятно данный товар вам пригодится. Не помешало бы взять</string>
+<string name="mb_no">Вероятно вам не нужен данный товар и он может стать пустой тратой денег</string>
 <string name="yes">Данный товар вам дейтсвительно нужен. Смело берите!</string>
 <string name="no">Вам не понадобится данный товар!
  Лучше отложите эти деньги</string>
