--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,5 +76,12 @@
     <string name="mb_no">Вероятно вам не нужен данный товар и он может стать пустой тратой денег</string>
     <string name="yes">Данный товар вам дейтсвительно нужен. Смело берите!</string>
     <string name="no">Вам не понадобится данный товар!
- Лучше отложите эти деньги</string>
+        Лучше отложите эти деньги</string>
+
+
+
+    <string name="goodJobForMonth">В прошлом месяце вы показали хорошие результаты. Так держать!</string>
+    <string name="badJobForMonth">Вам стоит эффективнее распоряжаться бюджетом! Удачи в следующем месяце</string>
+
+
 </resources>
